# proyecto-si784-2025-ii-u1-grupo-_sab_bcc_frlv

./: CS1-FD04-EPIS-SAD.docx  CS1_FD01-EPIS-Informe de Factibilidad.docx  CS1_FD02-Informe Vision.docx  CS1_FD03-Informe SRS de Proyecto.docx  CS1_FD06-EPIS-PropuestaProyecto.docx  FD01-EPIS-Informe Vision.docx  FD02-EPIS-Informe Vision.docx  FD02-EPIS-Informe de Factibilidad de Proyecto.docx  FD02-Informe-Vision.md  FD03-EPIS-SRS AccessGuard.docx  FD04-EPIS-SAD AccessGuard.docx  FD05-EPIS-Informe ProyectoFinal-AccessGuard.docx  FD06-EPIS-PropuestaProyecto.docx  README.md
Proyecto/: Dockerfile  presentacion-antivirus.md
Proyecto/ANTIVIRUS_PRODUCTION/: DESINSTALAR.bat  ESTADO_FINAL_SISTEMA.md  INSTALADOR_README.md  INSTALAR.bat  INSTALAR_SIMPLE.bat  SUBIR_LOGS.bat  antivirus_launcher.py  config.toml  demo_launcher.py  demo_launcher.spec  facade_launcher.py  install_antivirus.py  requirements.txt  simple_launcher.py  simple_launcher.spec  uninstall_antivirus.py
Proyecto/MD's Explicativos/: MODELOS_FINALES_PARA_ANTIVIRUS.md  README_PRODUCTION.md  RESUMEN_FINAL.md
Proyecto/proyecto_antiguo/: .gitignore  ANTIVIRUS_README.md  COMANDOS_EJECUCION.md  ESTADO_ACTUAL.md  (+21 more)
Proyecto/proyecto_antiguo/backup/workbench/antivirus/: CMakeLists.txt  antivirus_config.json  last_inference_output.txt  modelo_keylogger_from_datos.onnx  modelo_keylogger_from_datos.pkl  modelo_keylogger_from_datos_features.json  predecir_keylogger.py
Proyecto/proyecto_antiguo/backup/workbench/antivirus/src_cpp/: antivirus_controller.cpp  antivirus_controller.h  main.cpp  model_runner.cpp  model_runner.h
(+122 files in other folders)
